Proyecto Terminado 2.0.0 (error)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="buttonTextUrl">Visitar url</string>
     <string name="buttonTextAlarm">Poner Alarma</string>
     <string name="buttonTextGmail">Enviar gmail</string>
+    <string name="phone_desc">Llamar al telefono</string>
+    <string name="phone_goToConfig">volver a configuración</string>
 </resources>
